--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Weather app</title>
+  <link rel="stylesheet" type="text/css" href="colfax/style.css"/>
 </head>
 <body>
   <div id="root"></div>
